BUGFIX Reverted change r61158 which stopped scrollbars working
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/trunk@61202 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField_popup.css
+++ b/css/ComplexTableField_popup.css
@@ -1,10 +1,7 @@
-html,
-body {
+html,body {
+	overflow:auto !important; 
 	background: #fff !important; 
 }
-	html {
-		overflow: auto; 
-	}
 
 .ComplexTableField_popup {
 	background: #fff;	
